<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_line"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/company_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="邑青科技"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/company_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="17 May 2018"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/company_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Pending..."
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:id="@+id/company_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="2dp"
            android:text="@string/company_message"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/company_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="2dp"
            android:text="@string/company_file"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/company_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="2dp"
            android:text="@string/company_delete"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/company_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="2dp"
            android:text="@string/company_modify"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>